--- a/Data extracting NB.ipynb
+++ b/Data extracting NB.ipynb
@@ -14,7 +14,23 @@
     "\n",
     "# using a DF\n",
     "data = []\n",
-    "\n"
+    "\n",
+    "\n",
+    "# skip head line\n",
+    "for line in lines[1:]:\n",
+    "    parts = line.split(maxsplit=2)  # split into 3 parts: Ser, Category, SubCategory\n",
+    "    if len(parts) == 2: # SubCategory missing\n",
+    "        ser, category = parts\n",
+    "        sub_category = None\n",
+    "    elif len(parts) == 3:\n",
+    "        ser, category, sub_category = parts\n",
+    "    data.append([int(ser), category, sub_category])\n",
+    "\n",
+    "# add tp DF\n",
+    "df = pd.DataFrame(data, columns=['Ser', 'Category', 'SubCategory'])\n",
+    "\n",
+    "# print df\n",
+    "print(df)"
    ]
   }
  ],
