value error bugfix attempt

--- a/Data extracting NB.ipynb
+++ b/Data extracting NB.ipynb
@@ -31,12 +31,24 @@
     "# skip head line\n",
     "for line in lines[1:]:\n",
     "    parts = line.split(maxsplit=2)  # split into 3 parts: Ser, Category, SubCategory\n",
+    "    if len(parts) == 1:\n",
+    "        # only Ser, no Category or SubCategory\n",
+    "        ser = parts[0]\n",
+    "        category = None\n",
+    "        sub_category = None\n",
     "    if len(parts) == 2: # SubCategory missing\n",
     "        ser, category = parts\n",
     "        sub_category = None\n",
     "    elif len(parts) == 3:\n",
     "        ser, category, sub_category = parts\n",
-    "    data.append([int(ser), category, sub_category])\n",
+    "    \n",
+    "    try:\n",
+    "        ser = int(ser)\n",
+    "    except ValueError:\n",
+    "        continue\n",
+    "    \n",
+    "    data.append([ser, category, sub_category])\n",
+    "    # data.append([int(ser), category, sub_category])\n",
     "\n",
     "# add tp DF\n",
     "df = pd.DataFrame(data, columns=['Ser', 'Category', 'SubCategory'])\n",
