--- a/Data extracting NB.ipynb
+++ b/Data extracting NB.ipynb
@@ -2,18 +2,27 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "invalid literal for int() with base 10: '1011Computer'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[1], line 19\u001b[0m\n\u001b[0;32m     17\u001b[0m     \u001b[38;5;28;01melif\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(parts) \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m3\u001b[39m:\n\u001b[0;32m     18\u001b[0m         ser, category, sub_category \u001b[38;5;241m=\u001b[39m parts\n\u001b[1;32m---> 19\u001b[0m     data\u001b[38;5;241m.\u001b[39mappend([\u001b[38;5;28;43mint\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mser\u001b[49m\u001b[43m)\u001b[49m, category, sub_category])\n\u001b[0;32m     21\u001b[0m \u001b[38;5;66;03m# add tp DF\u001b[39;00m\n\u001b[0;32m     22\u001b[0m df \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mDataFrame(data, columns\u001b[38;5;241m=\u001b[39m[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mSer\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mCategory\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mSubCategory\u001b[39m\u001b[38;5;124m'\u001b[39m])\n",
-      "\u001b[1;31mValueError\u001b[0m: invalid literal for int() with base 10: '1011Computer'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "       Ser      Category                SubCategory\n",
+      "0        1   Agriculture                       None\n",
+      "1        2  Agricultural                Equipment\\n\n",
+      "2        3          None                       None\n",
+      "3        4          None                       None\n",
+      "4        5          None                       None\n",
+      "...    ...           ...                        ...\n",
+      "4592  4594          None                       None\n",
+      "4593  4595          None                       None\n",
+      "4594  4596          None                       None\n",
+      "4595     3            in  1 Breakfast Maker Parts\\n\n",
+      "4596     3            in       1 Breakfast Makers\\n\n",
+      "\n",
+      "[4597 rows x 3 columns]\n"
      ]
     }
    ],
