--- a/Data extracting NB.ipynb
+++ b/Data extracting NB.ipynb
@@ -2,28 +2,152 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "       Ser      Category                SubCategory\n",
-      "0        1   Agriculture                       None\n",
-      "1        2  Agricultural                Equipment\\n\n",
-      "2        3          None                       None\n",
-      "3        4          None                       None\n",
-      "4        5          None                       None\n",
-      "...    ...           ...                        ...\n",
-      "4592  4594          None                       None\n",
-      "4593  4595          None                       None\n",
-      "4594  4596          None                       None\n",
-      "4595     3            in  1 Breakfast Maker Parts\\n\n",
-      "4596     3            in       1 Breakfast Makers\\n\n",
-      "\n",
-      "[4597 rows x 3 columns]\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Ser</th>\n",
+       "      <th>Category</th>\n",
+       "      <th>SubCategory</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Agriculture</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Agricultural</td>\n",
+       "      <td>Equipment\\n</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>6</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>7</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>8</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>9</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>10</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>11</td>\n",
+       "      <td>Agricultural</td>\n",
+       "      <td>Growing Media\\n</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>12</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>13</td>\n",
+       "      <td>Agricultural</td>\n",
+       "      <td>Product Stock\\n</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>14</td>\n",
+       "      <td>Agricultural</td>\n",
+       "      <td>Waste\\n</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>15</td>\n",
+       "      <td>Animal</td>\n",
+       "      <td>Extract\\n</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    Ser      Category      SubCategory\n",
+       "0     1   Agriculture             None\n",
+       "1     2  Agricultural      Equipment\\n\n",
+       "2     3          None             None\n",
+       "3     4          None             None\n",
+       "4     5          None             None\n",
+       "5     6          None             None\n",
+       "6     7          None             None\n",
+       "7     8          None             None\n",
+       "8     9          None             None\n",
+       "9    10          None             None\n",
+       "10   11  Agricultural  Growing Media\\n\n",
+       "11   12          None             None\n",
+       "12   13  Agricultural  Product Stock\\n\n",
+       "13   14  Agricultural          Waste\\n\n",
+       "14   15        Animal        Extract\\n"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -63,7 +187,14 @@
     "df = pd.DataFrame(data, columns=['Ser', 'Category', 'SubCategory'])\n",
     "\n",
     "# print df\n",
-    "print(df)"
+    "df.head(15)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "    It looks like we have a skeleton, but a few issues exist, lets see if we can get subcategory to work"
    ]
   }
  ],
