try category & subcategory

--- a/Data extracting NB.ipynb
+++ b/Data extracting NB.ipynb
@@ -213,7 +213,50 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "    It looks like we have a skeleton, but a few issues exist, lets see if we can get subcategory to work"
+    "    It looks like we have a skeleton, but a few issues exist, lets see if we can get subcategory to work\n",
+    "\n",
+    "    we will start out with the first 1/2, spliting categories & subcategories "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('castToTxtFirst.txt', 'r') as file:\n",
+    "    lines = file.readlines()\n",
+    "\n",
+    "# list of SER values that should be categories\n",
+    "category_ser_list = [\n",
+    "    1, 152, 341, 535, 749, 927, 1011, 1070, 1316, 1384, 1467, 1511, 1545, 1560, \n",
+    "    1566, 1645, 1815, 1950, 1994, 2017, 2074, 2344, 2513, 2580, 2633, 3039, \n",
+    "    3121, 3207, 3388, 3549, 3604, 3680, 3764, 3819, 3872, 4070, 4122, 4260, \n",
+    "    4316, 4406, 4476\n",
+    "]\n",
+    "\n",
+    "data = []\n",
+    "current_category = None\n",
+    "\n",
+    "# each line\n",
+    "for line in lines[1:]:\n",
+    "    parts = line.strip().split(maxsplit=2)\n",
+    "    if len(parts) == 1:\n",
+    "        continue\n",
+    "    \n",
+    "    ser = int(parts[0])\n",
+    "    if ser in category_ser_list:\n",
+    "        current_category = parts[1] if len(parts) > 1 else None\n",
+    "    else:\n",
+    "        category = current_category\n",
+    "        sub_category = parts[1] if len(parts) > 1 else None\n",
+    "        data.append([ser, category, sub_category])\n",
+    "\n",
+    "df = pd.DataFrame(data, columns=['Ser', 'Category', 'SubCategory'])\n",
+    "\n",
+    "df.to_excel('output2a.xlsx', index=False)\n",
+    "\n",
+    "print(\"DataFrame saved to output.xlsx\")"
    ]
   }
  ],
