--- a/Data extracting NB.ipynb
+++ b/Data extracting NB.ipynb
@@ -220,9 +220,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "invalid literal for int() with base 10: '1011Computer'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[8], line 21\u001b[0m\n\u001b[0;32m     18\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(parts) \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m1\u001b[39m:\n\u001b[0;32m     19\u001b[0m     \u001b[38;5;28;01mcontinue\u001b[39;00m\n\u001b[1;32m---> 21\u001b[0m ser \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mint\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mparts\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     22\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m ser \u001b[38;5;129;01min\u001b[39;00m category_ser_list:\n\u001b[0;32m     23\u001b[0m     current_category \u001b[38;5;241m=\u001b[39m parts[\u001b[38;5;241m1\u001b[39m] \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(parts) \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m1\u001b[39m \u001b[38;5;28;01melse\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m\n",
+      "\u001b[1;31mValueError\u001b[0m: invalid literal for int() with base 10: '1011Computer'"
+     ]
+    }
+   ],
    "source": [
     "with open('castToTxtFirst.txt', 'r') as file:\n",
     "    lines = file.readlines()\n",
@@ -244,7 +256,11 @@
     "    if len(parts) == 1:\n",
     "        continue\n",
     "    \n",
-    "    ser = int(parts[0])\n",
+    "    try:\n",
+    "        ser = int(parts[0])\n",
+    "    except ValueError:\n",
+    "        continue\n",
+    "    \n",
     "    if ser in category_ser_list:\n",
     "        current_category = parts[1] if len(parts) > 1 else None\n",
     "    else:\n",
