multiple words in sub category

--- a/Data extracting NB.ipynb
+++ b/Data extracting NB.ipynb
@@ -232,6 +232,8 @@
     }
    ],
    "source": [
+    "import re # allows multiple words\n",
+    "\n",
     "with open('castToTxtFirst.txt', 'r') as file:\n",
     "    lines = file.readlines()\n",
     "\n",
@@ -248,8 +250,8 @@
     "\n",
     "# each line\n",
     "for line in lines[1:]:\n",
-    "    parts = line.strip().split(maxsplit=2)\n",
-    "    if len(parts) == 1:\n",
+    "    parts = re.split(r'(\\d+)\\s+(.*)', line.strip()) # allows multiple words\n",
+    "    if len(parts) < 3:\n",
     "        continue\n",
     "    \n",
     "    try:\n",
@@ -257,11 +259,12 @@
     "    except ValueError:\n",
     "        continue\n",
     "    \n",
+    "    ser = int(parts[1])\n",
     "    if ser in category_ser_list:\n",
-    "        current_category = parts[1] if len(parts) > 1 else None\n",
+    "        current_category = parts[2] if len(parts) > 2 else None\n",
     "    else:\n",
     "        category = current_category\n",
-    "        sub_category = parts[1] if len(parts) > 1 else None\n",
+    "        sub_category = parts[2] if len(parts) > 2 else None\n",
     "        data.append([ser, category, sub_category])\n",
     "\n",
     "df = pd.DataFrame(data, columns=['Ser', 'Category', 'SubCategory'])\n",
