nothing returned fixed

--- a/Data extracting NB.ipynb
+++ b/Data extracting NB.ipynb
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -248,23 +248,19 @@
     "data = []\n",
     "current_category = None\n",
     "\n",
-    "# each line\n",
+    "# # each line\n",
     "for line in lines[1:]:\n",
-    "    parts = re.split(r'(\\d+)\\s+(.*)', line.strip()) # allows multiple words\n",
-    "    if len(parts) < 3:\n",
+    "    match = re.match(r'(\\d+)\\s+(.*)', line.strip())\n",
+    "    if not match:\n",
     "        continue\n",
     "    \n",
-    "    try:\n",
-    "        ser = int(parts[0])\n",
-    "    except ValueError:\n",
-    "        continue\n",
+    "    ser = int(match.group(1))\n",
+    "    sub_category = match.group(2)\n",
     "    \n",
-    "    ser = int(parts[1])\n",
     "    if ser in category_ser_list:\n",
-    "        current_category = parts[2] if len(parts) > 2 else None\n",
+    "        current_category = sub_category\n",
     "    else:\n",
     "        category = current_category\n",
-    "        sub_category = parts[2] if len(parts) > 2 else None\n",
     "        data.append([ser, category, sub_category])\n",
     "\n",
     "df = pd.DataFrame(data, columns=['Ser', 'Category', 'SubCategory'])\n",
