empty lines attempt

--- a/Data extracting NB.ipynb
+++ b/Data extracting NB.ipynb
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -250,6 +250,12 @@
     "\n",
     "# # each line\n",
     "for line in lines[1:]:\n",
+    "    \n",
+    "    line = line.strip()             # keeps empty lines\n",
+    "    if not line:  # check for empty lines\n",
+    "        data.append([None, None, None])\n",
+    "        continue\n",
+    "    \n",
     "    match = re.match(r'(\\d+)\\s+(.*)', line.strip())\n",
     "    if not match:\n",
     "        continue\n",
@@ -259,6 +265,7 @@
     "    \n",
     "    if ser in category_ser_list:\n",
     "        current_category = sub_category\n",
+    "        data.append([ser, None, current_category])\n",
     "    else:\n",
     "        category = current_category\n",
     "        data.append([ser, category, sub_category])\n",
