Line skip bugfix

--- a/Data extracting NB.ipynb
+++ b/Data extracting NB.ipynb
@@ -220,17 +220,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "DataFrame saved to output.xlsx\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import re # allows multiple words\n",
     "\n",
@@ -245,6 +237,8 @@
     "    4316, 4406, 4476\n",
     "]\n",
     "\n",
+    "# category_ser_list = list(range(1, 4596))  # SER values 1 to 20 as categories\n",
+    "\n",
     "data = []\n",
     "current_category = None\n",
     "\n",
@@ -256,7 +250,7 @@
     "        data.append([None, None, None])\n",
     "        continue\n",
     "    \n",
-    "    match = re.match(r'(\\d+)\\s+(.*)', line.strip())\n",
+    "    match = re.match(r'(\\d+)\\s+(.*)', line)\n",
     "    if not match:\n",
     "        continue\n",
     "    \n",
@@ -270,7 +264,52 @@
     "        category = current_category\n",
     "        data.append([ser, category, sub_category])\n",
     "\n",
-    "df = pd.DataFrame(data, columns=['Ser', 'Category', 'SubCategory'])\n",
+    "df = pd.DataFrame(data, columns=['Ser', 'Category', 'SubCategory'])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_ser_values = list(range(1, 4596))\n",
+    "\n",
+    "missing_data = {\n",
+    "    'Ser': [],\n",
+    "    'Category': [],\n",
+    "    'SubCategory': []\n",
+    "}\n",
+    "\n",
+    "existing_sers = set(df['Ser'])\n",
+    "for ser in all_ser_values:\n",
+    "    if ser in existing_sers:\n",
+    "        continue  # skip if SER already exists\n",
+    "    \n",
+    "    missing_data['Ser'].append(ser)\n",
+    "    missing_data['Category'].append(None)\n",
+    "    missing_data['SubCategory'].append(None)\n",
+    "\n",
+    "# append missing data & sort\n",
+    "missing_df = pd.DataFrame(missing_data)\n",
+    "df = pd.concat([df, missing_df], ignore_index=True)\n",
+    "df = df.sort_values(by='Ser')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DataFrame saved to output.xlsx\n"
+     ]
+    }
+   ],
+   "source": [
     "\n",
     "df.to_excel('output2a.xlsx', index=False)\n",
     "\n",
