markdown & category name bugfix

--- a/Data extracting NB.ipynb
+++ b/Data extracting NB.ipynb
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -268,6 +268,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "    This section of code makes sure empty columns for a future subsub category & subsubsub category are included"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 20,
    "metadata": {},
@@ -294,6 +301,41 @@
     "missing_df = pd.DataFrame(missing_data)\n",
     "df = pd.concat([df, missing_df], ignore_index=True)\n",
     "df = df.sort_values(by='Ser')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "    This section fixes the final formatting error (category names being misaligned)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "category_ser_list = [\n",
+    "    1, 152, 341, 535, 749, 927, 1011, 1070, 1316, 1384, 1467, 1511, 1545, 1560, \n",
+    "    1566, 1645, 1815, 1950, 1994, 2017, 2074, 2344, 2513, 2580, 2633, 3039, \n",
+    "    3121, 3207, 3388, 3549, 3604, 3680, 3764, 3819, 3872, 4070, 4122, 4260, \n",
+    "    4316, 4406, 4476\n",
+    "]\n",
+    "\n",
+    "# update category names in DF\n",
+    "for index, row in df.iterrows():\n",
+    "    if row['Ser'] in category_ser_list:\n",
+    "        category_name = row['SubCategory']\n",
+    "        df.at[index, 'Category'] = category_name\n",
+    "        df.at[index, 'SubCategory'] = ''"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "    & finally this one commits it to Excel"
    ]
   },
   {
