--- a/Data extracting NB.ipynb
+++ b/Data extracting NB.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Converting the PDF to Excel\n",
+    "\n",
+    "### first attempt, simple but too intutitive"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
@@ -215,6 +224,8 @@
    "source": [
     "    It looks like we have a skeleton, but a few issues exist, lets see if we can get subcategory to work\n",
     "\n",
+    "### Second attempt, Categories & Sub categories only\n",
+    "\n",
     "    we will start out with the first 1/2, spliting categories & subcategories "
    ]
   },
@@ -356,6 +367,27 @@
     "df.to_excel('output2a.xlsx', index=False)\n",
     "\n",
     "print(\"DataFrame saved to output.xlsx\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "    We have 1 more job left in this section, this was manually done by using the array of category SER's, we will need a similar array before section 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Third attempt, Sub Sub (Categories & Sub Categories)"
    ]
   }
  ],
