find index for part 3

--- a/Data extracting NB.ipynb
+++ b/Data extracting NB.ipynb
@@ -378,10 +378,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 113,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "       Ser\n",
+      "909      3\n",
+      "910      4\n",
+      "911      5\n",
+      "912      6\n",
+      "913      7\n",
+      "...    ...\n",
+      "4590  4591\n",
+      "4591  4592\n",
+      "4592  4593\n",
+      "4593  4594\n",
+      "4594  4595\n",
+      "\n",
+      "[3686 rows x 1 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "filtered_values = pd.DataFrame(df)\n",
+    "\n",
+    "for x in filtered_values.index:\n",
+    "    if filtered_values.loc[x, 'Category'] != None:\n",
+    "        filtered_values.drop(x, inplace = True)\n",
+    "filtered_values = filtered_values.drop(['Category', 'SubCategory'], axis=1)\n",
+    "filtered_values.values.flatten()\n",
+    "\n",
+    "print(filtered_values)\n"
+   ]
   },
   {
    "cell_type": "markdown",
