--- a/Data extracting NB.ipynb
+++ b/Data extracting NB.ipynb
@@ -378,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -426,7 +426,36 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "with open('castToTxtSecond.txt', 'r') as file:\n",
+    "    lines = file.readlines()\n",
+    "\n",
+    "data2 = []\n",
+    "\n",
+    "for line in lines[1:]: # skip head\n",
+    "    line = line.strip()\n",
+    "    if not line:  # skip empty\n",
+    "        continue\n",
+    "    \n",
+    "    match = re.match(r'(\\d+)\\s+(.*)', line)\n",
+    "    if not match:\n",
+    "        continue\n",
+    "    \n",
+    "    ser = int(match.group(1))\n",
+    "    subsub_category = match.group(2)\n",
+    "    \n",
+    "    data2.append([ser, None, None, subsub_category])\n",
+    "\n",
+    "df2 = pd.DataFrame(data2, columns=['Ser', 'Category', 'SubCategory', 'SubSubCategory'])\n",
+    "\n",
+    "df2 = df2[df2['Ser'].isin(filtered_values)]\n",
+    "\n",
+    "df2 = df2.sort_values(by='Ser').reset_index(drop=True)\n",
+    "\n",
+    "df2.to_excel('/mnt/data/output2b.xlsx', index=False)\n",
+    "\n",
+    "df2.head(), df2.shape"
+   ]
   }
  ],
  "metadata": {
