--- a/Data extracting NB.ipynb
+++ b/Data extracting NB.ipynb
@@ -423,9 +423,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(Empty DataFrame\n",
+       " Columns: [Ser, Category, SubCategory, SubSubCategory]\n",
+       " Index: [],\n",
+       " (0, 4))"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "with open('castToTxtSecond.txt', 'r') as file:\n",
     "    lines = file.readlines()\n",
@@ -452,7 +466,7 @@
     "\n",
     "df2 = df2.sort_values(by='Ser').reset_index(drop=True)\n",
     "\n",
-    "df2.to_excel('/mnt/data/output2b.xlsx', index=False)\n",
+    "df.to_excel('output2b.xlsx', index=False)\n",
     "\n",
     "df2.head(), df2.shape"
    ]
