--- a/Data extracting NB.ipynb
+++ b/Data extracting NB.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -154,7 +154,7 @@
        "14   15        Animal        Extract\\n"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -323,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -351,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -378,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -423,19 +423,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Ser</th>\n",
+       "      <th>Category</th>\n",
+       "      <th>SubCategory</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>3</td>\n",
+       "      <td>in</td>\n",
+       "      <td>1 Breakfast Maker Parts\\n</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>3</td>\n",
+       "      <td>in</td>\n",
+       "      <td>1 Breakfast Makers\\n</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "(Empty DataFrame\n",
-       " Columns: [Ser, Category, SubCategory, SubSubCategory]\n",
-       " Index: [],\n",
-       " (0, 4))"
+       "   Ser Category                SubCategory\n",
+       "0    3       in  1 Breakfast Maker Parts\\n\n",
+       "1    3       in       1 Breakfast Makers\\n"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -444,31 +484,37 @@
     "with open('castToTxtSecond.txt', 'r') as file:\n",
     "    lines = file.readlines()\n",
     "\n",
-    "data2 = []\n",
+    "# using a DF\n",
+    "data = []\n",
     "\n",
-    "for line in lines[1:]: # skip head\n",
-    "    line = line.strip()\n",
-    "    if not line:  # skip empty\n",
+    "\n",
+    "# skip head line\n",
+    "for line in lines[1:]:\n",
+    "    parts = line.split(maxsplit=2)  # split into 3 parts: Ser, Category, SubCategory\n",
+    "    if len(parts) == 1:\n",
+    "        # only Ser, no Category or SubCategory\n",
+    "        ser = parts[0]\n",
+    "        category = None\n",
+    "        sub_category = None\n",
+    "    if len(parts) == 2: # SubCategory missing\n",
+    "        ser, category = parts\n",
+    "        sub_category = None\n",
+    "    elif len(parts) == 3:\n",
+    "        ser, category, sub_category = parts\n",
+    "    \n",
+    "    try:\n",
+    "        ser = int(ser)\n",
+    "    except ValueError:\n",
     "        continue\n",
     "    \n",
-    "    match = re.match(r'(\\d+)\\s+(.*)', line)\n",
-    "    if not match:\n",
-    "        continue\n",
-    "    \n",
-    "    ser = int(match.group(1))\n",
-    "    subsub_category = match.group(2)\n",
-    "    \n",
-    "    data2.append([ser, None, None, subsub_category])\n",
+    "    data.append([ser, category, sub_category])\n",
+    "    # data.append([int(ser), category, sub_category])\n",
     "\n",
-    "df2 = pd.DataFrame(data2, columns=['Ser', 'Category', 'SubCategory', 'SubSubCategory'])\n",
+    "# add tp DF\n",
+    "df2 = pd.DataFrame(data, columns=['Ser', 'Category', 'SubCategory'])\n",
     "\n",
-    "df2 = df2[df2['Ser'].isin(filtered_values)]\n",
-    "\n",
-    "df2 = df2.sort_values(by='Ser').reset_index(drop=True)\n",
-    "\n",
-    "df.to_excel('output2b.xlsx', index=False)\n",
-    "\n",
-    "df2.head(), df2.shape"
+    "# print df\n",
+    "df2.head(15)"
    ]
   }
  ],
