--- a/Data extracting NB.ipynb
+++ b/Data extracting NB.ipynb
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -450,32 +450,139 @@
        "      <th>Ser</th>\n",
        "      <th>Category</th>\n",
        "      <th>SubCategory</th>\n",
+       "      <th>SubSubCategory</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>3</td>\n",
-       "      <td>in</td>\n",
-       "      <td>1 Breakfast Maker Parts\\n</td>\n",
+       "      <td>1</td>\n",
+       "      <td>None</td>\n",
+       "      <td>Agricultural</td>\n",
+       "      <td>Greenhouses</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>None</td>\n",
+       "      <td>Aquaculture</td>\n",
+       "      <td>Equipment</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
        "      <td>3</td>\n",
-       "      <td>in</td>\n",
-       "      <td>1 Breakfast Makers\\n</td>\n",
+       "      <td>None</td>\n",
+       "      <td>Aquaculture</td>\n",
+       "      <td>Trap</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>None</td>\n",
+       "      <td>Fishing</td>\n",
+       "      <td>Float</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>None</td>\n",
+       "      <td>Fishing</td>\n",
+       "      <td>Net</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>6</td>\n",
+       "      <td>None</td>\n",
+       "      <td>Fishing</td>\n",
+       "      <td>Rope</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>7</td>\n",
+       "      <td>Other</td>\n",
+       "      <td>Aquaculture</td>\n",
+       "      <td>Equipment\\n</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>8</td>\n",
+       "      <td>None</td>\n",
+       "      <td>Ear</td>\n",
+       "      <td>Tag</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>9</td>\n",
+       "      <td>None</td>\n",
+       "      <td>Peat</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>10</td>\n",
+       "      <td>None</td>\n",
+       "      <td>Eggs</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>11</td>\n",
+       "      <td>Fowl</td>\n",
+       "      <td>&amp;</td>\n",
+       "      <td>Livestock\\n</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>12</td>\n",
+       "      <td>None</td>\n",
+       "      <td>Cacao</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>13</td>\n",
+       "      <td>None</td>\n",
+       "      <td>Coffee</td>\n",
+       "      <td>Beans</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>14</td>\n",
+       "      <td>None</td>\n",
+       "      <td>Vanilla</td>\n",
+       "      <td>Beans</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>15</td>\n",
+       "      <td>None</td>\n",
+       "      <td>Broad</td>\n",
+       "      <td>Beans</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Ser Category                SubCategory\n",
-       "0    3       in  1 Breakfast Maker Parts\\n\n",
-       "1    3       in       1 Breakfast Makers\\n"
+       "    Ser Category   SubCategory SubSubCategory\n",
+       "0     1     None  Agricultural    Greenhouses\n",
+       "1     2     None   Aquaculture      Equipment\n",
+       "2     3     None   Aquaculture           Trap\n",
+       "3     4     None       Fishing          Float\n",
+       "4     5     None       Fishing            Net\n",
+       "5     6     None       Fishing           Rope\n",
+       "6     7    Other   Aquaculture    Equipment\\n\n",
+       "7     8     None           Ear            Tag\n",
+       "8     9     None          Peat           None\n",
+       "9    10     None          Eggs           None\n",
+       "10   11     Fowl             &    Livestock\\n\n",
+       "11   12     None         Cacao           None\n",
+       "12   13     None        Coffee          Beans\n",
+       "13   14     None       Vanilla          Beans\n",
+       "14   15     None         Broad          Beans"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -486,32 +593,33 @@
     "\n",
     "# using a DF\n",
     "data = []\n",
-    "\n",
+    "ser_counter = 1 \n",
     "\n",
     "# skip head line\n",
     "for line in lines[1:]:\n",
     "    parts = line.split(maxsplit=2)  # split into 3 parts: Ser, Category, SubCategory\n",
+    "    \n",
     "    if len(parts) == 1:\n",
     "        # only Ser, no Category or SubCategory\n",
-    "        ser = parts[0]\n",
+    "        sub_category = parts[0]\n",
     "        category = None\n",
-    "        sub_category = None\n",
+    "        sub_sub_category = None\n",
     "    if len(parts) == 2: # SubCategory missing\n",
-    "        ser, category = parts\n",
-    "        sub_category = None\n",
+    "        sub_category, sub_sub_category = parts\n",
+    "        category = None\n",
     "    elif len(parts) == 3:\n",
-    "        ser, category, sub_category = parts\n",
+    "        category, sub_category, sub_sub_category = parts\n",
     "    \n",
-    "    try:\n",
-    "        ser = int(ser)\n",
-    "    except ValueError:\n",
-    "        continue\n",
+    "    # try:\n",
+    "    #     ser = int(ser)\n",
+    "    # except ValueError:\n",
+    "    #     continue\n",
     "    \n",
-    "    data.append([ser, category, sub_category])\n",
-    "    # data.append([int(ser), category, sub_category])\n",
+    "    data.append([ser_counter, category, sub_category, sub_sub_category])\n",
+    "    ser_counter += 1\n",
     "\n",
     "# add tp DF\n",
-    "df2 = pd.DataFrame(data, columns=['Ser', 'Category', 'SubCategory'])\n",
+    "df2 = pd.DataFrame(data, columns=['Ser', 'Category', 'SubCategory', 'SubSubCategory'])\n",
     "\n",
     "# print df\n",
     "df2.head(15)"
