--- a/Data extracting NB.ipynb
+++ b/Data extracting NB.ipynb
@@ -418,12 +418,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Third attempt, Sub Sub (Categories & Sub Categories)"
+    "### Third attempt, Sub Sub (Categories & Sub Categories)\n",
+    "\n",
+    "    Now lets try again with the sub sub category"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -582,7 +584,7 @@
        "14   15     None         Broad          Beans"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -623,6 +625,13 @@
     "\n",
     "# print df\n",
     "df2.head(15)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "    The categorization is now split, & our ser is not supposed to be there, lets fix that"
    ]
   }
  ],
