--- a/Data extracting NB.ipynb
+++ b/Data extracting NB.ipynb
@@ -633,6 +633,149 @@
    "source": [
     "    The categorization is now split, & our ser is not supposed to be there, lets fix that"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    Ser               SubSubCategory\n",
+      "0     1     Agricultural Greenhouses\n",
+      "1     2        Aquaculture Equipment\n",
+      "2     3             Aquaculture Trap\n",
+      "3     4                Fishing Float\n",
+      "4     5                  Fishing Net\n",
+      "5     6                 Fishing Rope\n",
+      "6     7  Other Aquaculture Equipment\n",
+      "7     8                      Ear Tag\n",
+      "8     9                         Peat\n",
+      "9    10                         Eggs\n",
+      "10   11             Fowl & Livestock\n",
+      "11   12                        Cacao\n",
+      "12   13                 Coffee Beans\n",
+      "13   14                Vanilla Beans\n",
+      "14   15                  Broad Beans\n"
+     ]
+    }
+   ],
+   "source": [
+    "df2.fillna('', inplace=True)\n",
+    "\n",
+    "df2['SubSubCategory'] = df2['Category'] + ' ' + df2['SubCategory'] + ' ' + df2['SubSubCategory']\n",
+    "df2['SubSubCategory'] = df2['SubSubCategory'].str.strip()\n",
+    "df2 = df2[['Ser', 'SubSubCategory']]\n",
+    "\n",
+    "print(df2.head(15))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>SubSubCategory</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Agricultural Greenhouses</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Aquaculture Equipment</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Aquaculture Trap</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Fishing Float</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Fishing Net</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3618</th>\n",
+       "      <td>Truck Steering</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3619</th>\n",
+       "      <td>Truck Suspension</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3620</th>\n",
+       "      <td>Truck Tire</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3621</th>\n",
+       "      <td>Truck Transmission</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3622</th>\n",
+       "      <td>Truck Wheel</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>3623 rows × 1 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                SubSubCategory\n",
+       "0     Agricultural Greenhouses\n",
+       "1        Aquaculture Equipment\n",
+       "2             Aquaculture Trap\n",
+       "3                Fishing Float\n",
+       "4                  Fishing Net\n",
+       "...                        ...\n",
+       "3618            Truck Steering\n",
+       "3619          Truck Suspension\n",
+       "3620                Truck Tire\n",
+       "3621        Truck Transmission\n",
+       "3622               Truck Wheel\n",
+       "\n",
+       "[3623 rows x 1 columns]"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df2.drop(['Ser'], axis=1)"
+   ]
   }
  ],
  "metadata": {
