--- a/Data extracting NB.ipynb
+++ b/Data extracting NB.ipynb
@@ -776,6 +776,32 @@
    "source": [
     "df2.drop(['Ser'], axis=1)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "    Now lets take this to Excel"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DataFrame 2b saved to output.xlsx\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.to_excel('output2b.xlsx', index=False)\n",
+    "\n",
+    "print(\"DataFrame 2b saved to output.xlsx\")"
+   ]
   }
  ],
  "metadata": {
