--- a/Data extracting NB.ipynb
+++ b/Data extracting NB.ipynb
@@ -786,7 +786,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -798,7 +798,7 @@
     }
    ],
    "source": [
-    "df.to_excel('output2b.xlsx', index=False)\n",
+    "df2.to_excel('output2b.xlsx', index=False)\n",
     "\n",
     "print(\"DataFrame 2b saved to output.xlsx\")"
    ]
