--- a/Data extracting NB.ipynb
+++ b/Data extracting NB.ipynb
@@ -802,6 +802,60 @@
     "\n",
     "print(\"DataFrame 2b saved to output.xlsx\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "    Next step is to spread df2 out"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "       Ser     Category             SubCategory            SubSubCategory\n",
+      "0        1  Agriculture                                                  \n",
+      "1        2  Agriculture  Agricultural Equipment                          \n",
+      "909      3           ss                    None                          \n",
+      "910      4         None                    None  Agricultural Greenhouses\n",
+      "911      5         None                    None  Agricultural Greenhouses\n",
+      "...    ...          ...                     ...                       ...\n",
+      "4590  4591         None                    None  Agricultural Greenhouses\n",
+      "4591  4592         None                    None  Agricultural Greenhouses\n",
+      "4592  4593         None                    None  Agricultural Greenhouses\n",
+      "4593  4594         None                    None  Agricultural Greenhouses\n",
+      "4594  4595         None                    None  Agricultural Greenhouses\n",
+      "\n",
+      "[4595 rows x 4 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "df3 = pd.DataFrame(df)\n",
+    "\n",
+    "df3['SubSubCategory'] = df3.apply(lambda _: '', axis=1)\n",
+    "\n",
+    "last_Cat = \"\"; last_Sub = \"\"; i = 0\n",
+    "\n",
+    "for x in df3.index:\n",
+    "    last_Cat = df3.loc[x, 'Category']; last_Sub = df3.loc[x, 'SubCategory']\n",
+    "    if df3.loc[x, 'Category'] == None:\n",
+    "        df3.loc[x, 'Category'] = last_Cat\n",
+    "        df3.loc[x, 'SubCategory'] = last_Sub\n",
+    "        df3.loc[x, 'SubSubCategory'] = df2.loc[i, 'SubSubCategory']\n",
+    "\n",
+    "print(df3)\n",
+    "\n",
+    "# last_Cat = df3.loc[21, 'Category']; last_Sub = df3.loc[x+1, 'SubCategory']\n",
+    "\n",
+    "# print(last_Cat)"
+   ]
   }
  ],
  "metadata": {
