--- a/Data extracting NB.ipynb
+++ b/Data extracting NB.ipynb
@@ -858,6 +858,32 @@
     "\n",
     "# print(last_Cat)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "    And its extraction time"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DataFrame 3 saved to output.xlsx\n"
+     ]
+    }
+   ],
+   "source": [
+    "df3.to_excel('output3.xlsx', index=False)\n",
+    "\n",
+    "print(\"DataFrame 3 saved to output.xlsx\")"
+   ]
   }
  ],
  "metadata": {
