--- a/Data extracting NB.ipynb
+++ b/Data extracting NB.ipynb
@@ -884,6 +884,13 @@
     "\n",
     "print(\"DataFrame 3 saved to output.xlsx\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Fourth & final attempt, clean up\n"
+   ]
   }
  ],
  "metadata": {
