tree attempt coded

--- a/Data extracting NB.ipynb
+++ b/Data extracting NB.ipynb
@@ -889,7 +889,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Fourth & final attempt, clean up\n"
+    "### Fourth & final attempt, clean up:\n",
+    "\n",
+    "    Now we will attempt the tree implementation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df4 = pd.DataFrame(df3)\n",
+    "\n",
+    "df4.replace('', pd.NA, inplace=True)\n",
+    "\n",
+    "# Apply forward fill to the 'Category' and 'SubCategory' columns\n",
+    "df4[['Category', 'SubCategory']] = df4[['Category', 'SubCategory']].ffill()\n",
+    "\n",
+    "# Print the resulting DataFrame for verification\n",
+    "print(df4)"
    ]
   }
  ],
