--- a/Data extracting NB.ipynb
+++ b/Data extracting NB.ipynb
@@ -896,9 +896,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "       Ser        Category             SubCategory            SubSubCategory\n",
+      "0        1     Agriculture                    <NA>                      <NA>\n",
+      "1        2     Agriculture  Agricultural Equipment                      <NA>\n",
+      "909      3     Agriculture  Agricultural Equipment  Agricultural Greenhouses\n",
+      "910      4     Agriculture  Agricultural Equipment     Aquaculture Equipment\n",
+      "911      5     Agriculture  Agricultural Equipment          Aquaculture Trap\n",
+      "...    ...             ...                     ...                       ...\n",
+      "4590  4591  Transportation             Truck Parts               Truck Wheel\n",
+      "4591  4592  Transportation             Truck Parts               Truck Wheel\n",
+      "4592  4593  Transportation             Truck Parts               Truck Wheel\n",
+      "4593  4594  Transportation             Truck Parts               Truck Wheel\n",
+      "4594  4595  Transportation             Truck Parts               Truck Wheel\n",
+      "\n",
+      "[4595 rows x 4 columns]\n"
+     ]
+    }
+   ],
    "source": [
     "df4 = pd.DataFrame(df3)\n",
     "\n",
