--- a/Data extracting NB.ipynb
+++ b/Data extracting NB.ipynb
@@ -925,10 +925,44 @@
     "\n",
     "df4.replace('', pd.NA, inplace=True)\n",
     "\n",
-    "# Apply forward fill to the 'Category' and 'SubCategory' columns\n",
+    "# apply forward fill to 'Category' & 'SubCategory'\n",
     "df4[['Category', 'SubCategory']] = df4[['Category', 'SubCategory']].ffill()\n",
     "\n",
-    "# Print the resulting DataFrame for verification\n",
+    "print(df4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "       Ser        Category             SubCategory            SubSubCategory\n",
+      "0        3     Agriculture  Agricultural Equipment  Agricultural Greenhouses\n",
+      "1        4     Agriculture  Agricultural Equipment     Aquaculture Equipment\n",
+      "2        5     Agriculture  Agricultural Equipment          Aquaculture Trap\n",
+      "3        6     Agriculture  Agricultural Equipment             Fishing Float\n",
+      "4        7     Agriculture  Agricultural Equipment               Fishing Net\n",
+      "...    ...             ...                     ...                       ...\n",
+      "3681  4591  Transportation             Truck Parts               Truck Wheel\n",
+      "3682  4592  Transportation             Truck Parts               Truck Wheel\n",
+      "3683  4593  Transportation             Truck Parts               Truck Wheel\n",
+      "3684  4594  Transportation             Truck Parts               Truck Wheel\n",
+      "3685  4595  Transportation             Truck Parts               Truck Wheel\n",
+      "\n",
+      "[3686 rows x 4 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# df4.replace('', pd.NA, inplace=True)\n",
+    "\n",
+    "# remove rows that are just titles (where SubSubCategory is na) & reset index\n",
+    "df4 = df4.dropna(subset=['SubSubCategory'])\n",
+    "df4.reset_index(drop=True, inplace=True)\n",
     "print(df4)"
    ]
   }
