--- a/Data extracting NB.ipynb
+++ b/Data extracting NB.ipynb
@@ -932,6 +932,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "    Now lets remove the (now redundant) rows that just declare category & sub category"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {},
@@ -964,6 +971,13 @@
     "df4 = df4.dropna(subset=['SubSubCategory'])\n",
     "df4.reset_index(drop=True, inplace=True)\n",
     "print(df4)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "    then we export to excel"
    ]
   }
  ],
