--- a/Data extracting NB.ipynb
+++ b/Data extracting NB.ipynb
@@ -979,6 +979,25 @@
    "source": [
     "    then we export to excel"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DataFrame 4 saved to output.xlsx\n"
+     ]
+    }
+   ],
+   "source": [
+    "df4.to_excel('output4.xlsx', index=False)\n",
+    "\n",
+    "print(\"DataFrame 4 saved to output.xlsx\")"
+   ]
   }
  ],
  "metadata": {
