--- a/method 2- adobe acrobat/Excel Processing NB.ipynb
+++ b/method 2- adobe acrobat/Excel Processing NB.ipynb
@@ -3,6 +3,17 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "# Processing the Excel Sheet\n",
+    "\n",
+    "    First, lets import the doc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
